force-app/main/default/objects/Price_Book_Entry_History__c/Price_Book_Entry_History__c.object-meta.xml
<CustomObject>
    <label>Price Book Entry History</label>
    <nameField>
        <label>Price Book Entry History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Book Entry History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>