force-app/main/default/objects/Price_Book_Entry_History__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Book Entry History</relationshipLabel>
    <relationshipName>Price_Book_Entry_History</relationshipName>
    <type>Lookup</type>
</CustomField>